pymunk/Chipmunk_src/cpSpace.h



// User collision pair function.
typedef int (*cpCollFunc)(cpShape *a, cpShape *b, cpContact *contacts, int numContacts, void *data);


// Structure for holding collision pair function information.
// Used internally.
typedef struct cpCollPairFunc {
	unsigned long a;
	unsigned long b;
	cpCollFunc func;
	void *data;
} cpCollPairFunc;


typedef struct cpSpace{
	// Number of iterations to use in the impulse solver.
	int iterations;
//	int sleepTicks;
	
	// Self explanatory.
	cpVect gravity;
	cpFloat damping;
	
	// Time stamp. Is incremented on every call to cpSpaceStep().
	int stamp;

	// The static and active shape spatial hashes.
	cpSpaceHash *staticShapes;
	cpSpaceHash *activeShapes;
	
	// List of bodies in the system.
	cpArray *bodies;
	// List of active arbiters for the impulse solver.
	cpArray *arbiters;
	// Persistant contact set.
	cpHashSet *contactSet;
	
	// List of joints in the system.
	cpArray *joints;
	
	// Set of collisionpair functions.
	cpHashSet *collFuncSet;
	// Default collision pair function.
	cpCollPairFunc defaultPairFunc;
} cpSpace;


// Basic allocation/destruction functions.
cpSpace* cpSpaceAlloc(void);

cpSpace* cpSpaceInit(cpSpace *space);

cpSpace* cpSpaceNew(void);


void cpSpaceDestroy(cpSpace *space);

void cpSpaceFree(cpSpace *space);


// Convenience function. Frees all referenced entities. (bodies, shapes and joints)
void cpSpaceFreeChildren(cpSpace *space);


// Collision pair function management functions.
void cpSpaceAddCollisionPairFunc(cpSpace *space, unsigned long a, unsigned long b,
                                 cpCollFunc func, void *data);

void cpSpaceRemoveCollisionPairFunc(cpSpace *space, unsigned long a, unsigned long b);

void cpSpaceSetDefaultCollisionPairFunc(cpSpace *space, cpCollFunc func, void *data);


// Add and remove entities from the system.
void cpSpaceAddShape(cpSpace *space, cpShape *shape);

void cpSpaceAddStaticShape(cpSpace *space, cpShape *shape);

void cpSpaceAddBody(cpSpace *space, cpBody *body);

void cpSpaceAddJoint(cpSpace *space, cpJoint *joint);


void cpSpaceRemoveShape(cpSpace *space, cpShape *shape);

void cpSpaceRemoveStaticShape(cpSpace *space, cpShape *shape);

void cpSpaceRemoveBody(cpSpace *space, cpBody *body);

void cpSpaceRemoveJoint(cpSpace *space, cpJoint *joint);


// Iterator function for iterating the bodies in a space.
typedef void (*cpSpaceBodyIterator)(cpBody *body, void *data);

void cpSpaceEachBody(cpSpace *space, cpSpaceBodyIterator func, void *data);


// Spatial hash management functions.
void cpSpaceResizeStaticHash(cpSpace *space, cpFloat dim, int count);

void cpSpaceResizeActiveHash(cpSpace *space, cpFloat dim, int count);

void cpSpaceRehashStatic(cpSpace *space);


// Update the space.
void cpSpaceStep(cpSpace *space, cpFloat dt);