trunk/pymunk/Chipmunk_src/cpJoint.h



typedef struct cpJoint {
	cpBody *a, *b;

	void (*preStep)(struct cpJoint *joint, cpFloat dt_inv);
	void (*applyImpulse)(struct cpJoint *joint);
} cpJoint;